--- a/index.html
+++ b/index.html
@@ -16,37 +16,13 @@
 
 		<div class="wrapper-card">
 
-			<form class="input-form" action="javascript:void(0);">
+			<form class="input-form" id="form" action="javascript:void(0);">
 				<input type="text" id="newTask" class="form-control mr-1" />
 				<button class="btn btn-primary">Добавить</button>
 			</form>
 
 			<!-- Список задач -->
-			<ul class="todo-list">
-
-				<li class="todo-item ">
-					<label class="todo-item-label">
-						<input class="checkbox" type="checkbox" checked />
-						<span class="completed">Заверстать стартовый шаблон</span>
-						<button class="btn btn-secondary btn-sm">Удалить</button>
-					</label>
-				</li>
-
-				<li class="todo-item">
-					<label class="todo-item-label">
-						<input class="checkbox" type="checkbox" />
-						<span>Написать скрипт</span>
-						<button class="btn btn-secondary btn-sm">Удалить</button>
-					</label>
-				</li>
-
-				<li class="todo-item">
-					<label class="todo-item-label">
-						<input class="checkbox" type="checkbox" />
-						<span>Записать урок</span>
-						<button class="btn btn-secondary btn-sm">Удалить</button>
-					</label>
-				</li>
+			<ul class="todo-list" id="taskList">
 
 			</ul>
 			<!-- // Список задач -->
